--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@modernice/vue-ui",
   "version": "0.0.1",
-  "description": "UI composables for Vue 3",
+  "description": "UI library for Vue projects",
   "type": "module",
   "main": "./dist/index.mjs",
   "module": "./dist/index.mjs",
