--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
       "require": "./dist/index.cjs"
     },
     "./utils": {
-      "types": "./dist/utils/index.d.ts",
-      "import": "./dist/utils/index.mjs",
-      "require": "./dist/utils/index.cjs"
+      "types": "./dist/utils.d.ts",
+      "import": "./dist/utils.mjs",
+      "require": "./dist/utils.cjs"
     }
   },
   "scripts": {
     "test": "vitest",
-    "test:watch": "vitest --watch",
     "build": "vite build",
     "prepack": "pnpm build"
   },
@@ -28,17 +27,22 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["dist", "package.json", "index.d.ts", "utils.d.ts"],
+  "files": [
+    "dist",
+    "package.json",
+    "index.d.ts",
+    "utils.d.ts"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@vue/reactivity": "^3.2.47",
-    "@vueuse/core": "^9.0.0",
-    "@vueuse/shared": "^9.0.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-plugin-dts": "^2.0.2",
-    "vitest": "^0.25.8",
-    "vue": "^3.0.0"
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/shared": "^9.13.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.2.0",
+    "vite-plugin-dts": "^2.1.0",
+    "vitest": "^0.29.3",
+    "vue": "^3.2.47"
   },
   "peerDependencies": {
     "@vue/reactivity": "^3.2.47",
