chore: update linting setup
feat(prettier): add trailingComma rule to prettier config for better version control
feat(eslint): add new eslint config file with antfu rules for improved linting
refactor(index.d.ts, utils.d.ts): remove .js extension from export statements for better TypeScript support
refactor(package.json): update @vueuse/core version in peerDependencies to match devDependencies
refactor(tsconfig.json, tsconfig.node.json): update compilerOptions for better module resolution and include .vue files
refactor(vite.config.ts): refactor build configuration and external dependencies check for better build process

--- a/package.json
+++ b/package.json
@@ -35,9 +35,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@antfu/eslint-config": "1.0.0-beta.27",
     "@vue/reactivity": "^3.3.4",
     "@vueuse/core": "^10.5.0",
     "@vueuse/shared": "^10.5.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "pkg-types": "^1.0.3",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
     "vite-plugin-dts": "^3.6.0",
@@ -46,7 +51,7 @@
   },
   "peerDependencies": {
     "@vue/reactivity": "^3.2.45",
-    "@vueuse/core": "^10.3.0",
+    "@vueuse/core": "^10.5.0",
     "@vueuse/shared": "^10.3.0",
     "vue": "^3.0.0"
   }
