--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,9 @@
 {
 	"compilerOptions": {
 		"composite": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
 		"resolveJsonModule": true,
 		"esModuleInterop": true
 	},
