--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.27",
-    "@vue/reactivity": "^3.3.4",
-    "@vueuse/core": "^10.5.0",
-    "@vueuse/shared": "^10.5.0",
-    "eslint": "^8.51.0",
+    "@antfu/eslint-config": "2.1.0",
+    "@vue/reactivity": "^3.3.8",
+    "@vueuse/core": "^10.6.1",
+    "@vueuse/shared": "^10.6.1",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "pkg-types": "^1.0.3",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11",
-    "vite-plugin-dts": "^3.6.0",
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
+    "vite-plugin-dts": "^3.6.3",
     "vitest": "^0.34.6",
-    "vue": "^3.3.4"
+    "vue": "^3.3.8"
   },
   "peerDependencies": {
     "@vue/reactivity": "^3.2.45",
