feat(gitignore): add jotbot.env to .gitignore to prevent accidental commit of sensitive data feat(eslint.config.js): disable operator-linebreak rule for better code readability feat(jotbot.env.example): add example jotbot.env file to guide users in setting up environment variables feat(scripts/docs.sh): add new script for generating documentation using jotbot refactor(useAction/index.test.ts): replace toBe(null) with toBeNull() for better semantics and add new test cases for error parsing refactor(useAction/index.ts): enhance error handling by allowing custom error parsing and throwing of custom errors feat(tsconfig.json): enable pretty option for better error reporting and change include path for better file resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "skipLibCheck": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "rootDir": "./src",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "pretty": true
   },
-  "include": ["src/**/*.{ts,vue}"],
+  "include": ["./src/**/*"],
   "exclude": ["**/node_modules/**"]
 }
