--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "@vueuse/core": "^10.0.0",
     "@vueuse/shared": "^10.0.0",
     "vue": "^3.0.0"
+  },
+  "dependencies": {
+    "defu": "^6.1.4"
   }
 }
